# stm32TestProject

./: .cproject  .gitignore  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  arm-none-eabi-gcc.cmake  cmake_install.cmake  led_blink Debug.launch  led_blink.ioc
Core/Inc/: main.h  stm32f4xx_it.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Core/Src/lib/UL/button_controler/: button_controler.c
Core/Src/lib/UL/io/io_generic/: io_generic.h
Core/Src/lib/UL/io/io_package_convertor/: io_package_convertor.h
Core/Src/lib/UL/io/io_spi/: io_spi.c
Core/Src/lib/UL/io/io_uart/: io_uart.h
Core/Src/lib/UL/spinner/: spinner.c  spinner.h
Core/Src/lib/drivers/button/: button.c
Core/Src/lib/drivers/led/: led.c  led.h
Core/Src/lib/drivers/uart/: uart.c
Debug/: led_blink.list  makefile  objects.list  sources.mk  stm32_spinner_project.list
Debug/Core/Src/: subdir.mk
Debug/Core/Src/lib/UL/button_controler/: subdir.mk
Debug/Core/Src/lib/UL/io/io_config/: subdir.mk
Debug/Core/Src/lib/UL/io/io_generic/: subdir.mk
Debug/Core/Src/lib/UL/io/io_i2c/: subdir.mk
Debug/Core/Src/lib/UL/io/io_package_convertor/: subdir.mk
Debug/Core/Src/lib/UL/io/io_spi/: subdir.mk
Debug/Core/Src/lib/UL/io/io_uart/: subdir.mk
Debug/Core/Src/lib/UL/spinner/: subdir.mk
Debug/Core/Src/lib/drivers/button/: subdir.mk
Debug/Core/Src/lib/drivers/led/: subdir.mk
Debug/Core/Src/lib/drivers/uart/: subdir.mk
Debug/Core/Src/lib/utils/: subdir.mk
Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
Inc/: main.h
Src/: dl_led.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Src/lib/UL/: spinner.c  spinner.h
Src/lib/UL/button_controler/: button_controler.c  button_controler.h
Src/lib/UL/io/io_config/: io_config.c  io_config.h
Src/lib/UL/io/io_generic/: io_generic.c  io_generic.h  io_generic_conf.h
Src/lib/UL/io/io_i2c/: io_i2c.c  io_i2c.h
Src/lib/UL/io/io_package_convertor/: io_package_convertor.c
Src/lib/UL/io/io_spi/: io_spi.c  io_spi.h
Src/lib/UL/io/io_uart/: io_uart.c  io_uart.h
Src/lib/UL/io_generic/: io_generic.c  io_generic.h
Src/lib/UL/io_i2c/: io_i2c.c
Src/lib/UL/io_spi/: io_spi.c  io_spi.h
Src/lib/UL/io_uart/: io_uart.c  io_uart.h
Src/lib/UL/spinner/: spinner.c  spinner.h
Src/lib/UL/uart_manager/: uart_manager.c  uart_manager.h
Src/lib/UL/uart_package_convertor/: uart_package_convertor.c  uart_package_convertor.h
Src/lib/drivers/button/: button.c  button.h
Src/lib/drivers/led/: dl_led.h  led.c  led.h
Src/lib/drivers/uart/: uart.c  uart.h
Src/lib/utils/: queue.c  queue.h
lib/STM32Cube_FW_F4_V1.25.1/Drivers/BSP/STM32F4-Discovery/: stm32f4_discovery.c
lib/STM32Cube_FW_F4_V1.25.1/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
lib/STM32Cube_FW_F4_V1.25.1/Drivers/CMSIS/Include/: core_cm4.h
